// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User .create() should accept gender "f" 1`] = `
Object {
  "gender": "f",
  "id": "1",
  "name": "Brian",
  "wishList": Object {
    "items": Array [],
  },
}
`;

exports[`User .create() should accept gender "m" 1`] = `
Object {
  "gender": "m",
  "id": "1",
  "name": "Brian",
  "wishList": Object {
    "items": Array [],
  },
}
`;

exports[`User .create() should accept gender "x" 1`] = `
Object {
  "gender": "x",
  "id": "1",
  "name": "Brian",
  "wishList": Object {
    "items": Array [],
  },
}
`;

exports[`User .create() should return expected item with wishlist 1`] = `
Object {
  "gender": "m",
  "id": "1",
  "name": "Brian",
  "wishList": Object {
    "items": Array [
      Object {
        "image": "image1",
        "name": "name1",
        "price": 1,
      },
      Object {
        "image": "image2",
        "name": "name2",
        "price": 2,
      },
      Object {
        "image": "image3",
        "name": "name3",
        "price": 3,
      },
    ],
  },
}
`;

exports[`User .create() should return expected item without wishlist 1`] = `
Object {
  "gender": "m",
  "id": "1",
  "name": "Brian",
  "wishList": Object {
    "items": Array [],
  },
}
`;
